code/apps/dashboard-test/base/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboardtest-stripprefix
  namespace: msp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  stripPrefix:
    prefixes:
      - /msp/dashboardtest
---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: dashboardtest-upgrade
#   namespace: msp
#   annotations:
#     kubernetes.io/ingress.class: traefik
# spec:
#    headers:
#      contentSecurityPolicy: "upgrade-insecure-requests"     
# ---
apiVersion: networking.k8s.io/v1
# apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboardtest-ingress
  namespace: msp
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares:
      msp-dashboardtest-stripprefix@kubernetescrd
      # msp-dashboardtest-stripprefix@kubernetescrd, msp-dashboardtest-upgrade@kubernetescrd

spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /msp/dashboardtest
            pathType: Prefix
            backend:
              service:
                name: dashboard-test
                port:
                  number: 80
